2006-11-07  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs:
		Don't import the flags of an assembly name reference.

2006-11-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/PropertyDefinition.cs:
		Fix property cloning.
		Patch by Alex Prudkiy <prudkiy@mail.ru>

2006-10-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
		Use the proper generic context when reading memberrefs.

2006-10-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/Document.cs:
		Complete a little bit.

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Get rid of a lot of exceptions when creating the security
		attribute.

2006-10-10  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
	  Mono.Cecil/CustomAttribute.cs:
	  Mono.Cecil.Signatures/SignatureReader.cs:
	  Mono.Cecil/SecurityDeclarationReader.cs:
		Patch from: Eyal Alaluf  <eyala@mainsoft.com>.
		Add support for resolving custom attributes that contain references
		to enum in other assemblies.

2006-10-09  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IRequireResolving.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Introduce the interface IRequireResolving implemented
		by CustomAttribute and SecurityDeclaration for when they can't
		be read without loading another assembly.

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Prevent Cecil to crash when it can not get the type
		of the declaration.

2006-10-04  Eyal Alaluf  <eyala@mainsoft.com>

	* Mono.Cecil/StructureReader.cs:
		Visit the module we load when a DLL has more then 1 module.
	  Mono.Cecil/AssemblyNameReference.cs:
	  	Allow "PublicToken=null" when parsing an assembly full name.

2006-10-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil.Binary/ResourceReader.cs:
		CompactFramework fix.
