@@ -56,8 +56,10 @@ namespace Mono.Cecil {
 #if !CF_1_0 && !CF_2_0
 			if (name.Name == "mscorlib")
 				return GetCorlib (name);
-			else if (IsInGac (name))
-				return AssemblyFactory.GetAssembly (GetFromGac (name));
+
+			AssemblyDefinition asm = GetAssemblyInGac (name);
+			if (asm != null)
+				return asm;
 #endif
 
 			throw new FileNotFoundException ("Could not resolve: " + name);
@@ -101,15 +103,30 @@ namespace Mono.Cecil {
 			return typeof (object).Assembly.GetType ("System.MonoType", false) != null;
 		}
 
-		static bool IsInGac (AssemblyNameReference reference)
+		static AssemblyDefinition GetAssemblyInGac (AssemblyNameReference reference)
 		{
 			if (reference.PublicKeyToken == null || reference.PublicKeyToken.Length == 0)
-				return false;
+				return null;
 
-			return File.Exists (GetFromGac (reference));
+			string currentGac = GetCurrentGacPath ();
+			if (OnMono ()) {
+				string s = GetAssemblyFile (reference, currentGac);
+				if (File.Exists (s))
+					return AssemblyFactory.GetAssembly (s);
+			} else {
+				string [] gacs = new string [] {"GAC_MSIL", "GAC_32", "GAC"};
+				for (int i = 0; i < gacs.Length; i++) {
+					string gac = Path.Combine (Directory.GetParent (currentGac).FullName, gacs [i]);
+					string asm = GetAssemblyFile (reference, gac);
+					if (Directory.Exists (gac) && File.Exists (asm))
+						return AssemblyFactory.GetAssembly (asm);
+				}
+			}
+
+			return null;
 		}
 
-		static string GetFromGac (AssemblyNameReference reference)
+		static string GetAssemblyFile (AssemblyNameReference reference, string gac)
 		{
 			StringBuilder sb = new StringBuilder ();
 			sb.Append (reference.Version);
@@ -119,11 +136,11 @@ namespace Mono.Cecil {
 
 			return Path.Combine (
 				Path.Combine (
-					Path.Combine (GetGacPath (), reference.Name), sb.ToString ()),
+					Path.Combine (gac, reference.Name), sb.ToString ()),
 					string.Concat (reference.Name, ".dll"));
 		}
 
-		static string GetGacPath ()
+		static string GetCurrentGacPath ()
 		{
 			return Directory.GetParent (
 				Directory.GetParent (
