@@ -1,3 +1,8 @@
+2006-11-08  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/BaseAssemblyResolver.cs:
+		Handles different kind of GAC on Windows.
+
 2006-11-07  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionHelper.cs:
